--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Shojumaru&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Hanami sushi</title>
 </head>
+<body>
 <header id="p_head">
     <div id="infoContact">02.35.42.39.33</div>
     <div id="btnHome">Hanami-sushi</div>
