--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
 
 <section id="secStory">
     <div class="borderTitle"><h1>Bienvenue<h1></div>
-    <div>
-        <img src="assets/img/japan-4807317_960_720.jpg">
+        <img class="imgStory" src="assets/img/japan-4807317_960_720.jpg">
+        <div class="txtStory">
         <h2>Notre histoire</h2>
-        <p>dfgdfgdf</p>
-    </div>
+        <p>La famille Tanaka réputé dans la province d'Osaka<br> pour leur stand de sushi,<br>au marché de Kuromon Ichiba.</p>
+        <p>Ils décident de s'installer au Havre<br> aprés la promotion de Kiyo le pére.</p>
+        <p>Ils décident d'ouvir Hanami sushi en 2018<br> avec tout le savoir faire ancestrale<br> et de le transformer en bar a sushi.</p>
+        </div>
 </section>
 
 <!-- 
@@ -64,7 +66,7 @@
  <section id="secService">
      <div class="borderTitle"><h1>Nos réalisations<h1></div>
      <div id="gallery">
-         <div id="left_arrow"><span><</span></div>
+         <div id="left_arrow"><span></span></div>
          <div id="mainGallery">
              <div class="slotimg">
              </div>
