--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <header id="p_head">
-    <div id="infoContact">02.35.42.39.33</div>
+    <div id="infoContact1">02.35.42.39.33</div>
+    <div id="InfoContact2">153 Quai George V, 76600 Le Havre</div>
     <div id="btnHome"><h1>Hanami sushi</h1></div>
     <div></div>
 </header>
 
-<body>
 <!-- 
 -- NavBar
 -------------------------------------->
@@ -54,7 +54,7 @@
         <img class="imgStory" src="assets/img/japan-4807317_960_720.jpg">
         <div class="txtStory">
         <h2>Notre histoire</h2>
-        <p>La famille Tanaka réputé dans la province d'Osaka<br> pour leur stand de sushi,<br>au marché de Kuromon Ichiba.</p>
+        <p>La famille Tanaka réputé<br> dans la province d'Osaka<br> pour leur stand de sushi,<br>au marché de Kuromon Ichiba.</p>
         <p>Ils décident de s'installer au Havre<br> aprés la promotion de Kiyo le pére.</p>
         <p>Ils décident d'ouvir Hanami sushi en 2018<br> avec tout le savoir faire ancestrale<br> et de le transformer en bar a sushi.</p>
         </div>
