Creation du grid mise en forme pour mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,83 +8,96 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Shojumaru&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" type="image/ico" href="assets/img/favicon.ico"/>
+    <link rel="shortcut icon" type="image/ico" href="assets/img/favicon.ico" />
     <title>Hanami sushi</title>
 </head>
+
 <body>
-<header id="p_head">
-    <div id="infoContact1">
-        
-        <address><i class="fas fa-map-marker-alt"></i> 153 Quai George V,
-        <br>  76600 Le Havre
-        <br><i class="fas fa-phone-square-alt"></i> 02.35.42.39.33</address>
-    </div>
-    <div id="btnHome"><a href="#myTopnav"><h1>Hanami sushi</h1></a></div>
-    <div></div>
-</header>
+    <div class="wrapper">
+        <header id="p_head">
+            <div id="infoContact1">
 
-<nav class="topnav" id="myTopnav">
-    <div id="startPage">
-        <a href="#p_head">
-            <img src="assets/img/my-icons-collection/svg/004-pagoda.svg" alt="temple japonais" title="temple japonais">
-            Accueil
-        </a>
-    </div>
-    <div id="story">
-        <a href="#secStory">
-            <img src="assets/img/my-icons-collection/svg/001-temple.svg" alt="torii" title="torii">
-            Notre restaurant
-        </a>
-    </div>
-    <div id="contact">
-        <a href="#secContact">
-            <img src="assets/img/my-icons-collection/svg/003-invoice.svg" alt="papier et plume" title="papier et plume">
-            Contact
-        </a>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Services
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="#secService">Nos spécialités</a>
-        <a href="assets/img/menu.jpg">Le Menu</a>
-        <a href="#secContact">
-            <img src="assets/img/my-icons-collection/svg/002-asian.svg">
-            Devis Traiteur
-        </a>
-      </div>
-    </div>
-    <a href="#secFooter">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="respNavBar()">&#9776;</a>
-</nav> 
+                <address><i class="fas fa-map-marker-alt"></i> 153 Quai George V,
+                    <br> 76600 Le Havre
+                    <br><i class="fas fa-phone-square-alt"></i> 02.35.42.39.33</address>
+            </div>
+            <div id="btnHome"><a href="#myTopnav">
+                    <h1>Hanami sushi</h1>
+                </a></div>
+            <div></div>
+        </header>
+
+        <nav class="topnav" id="myTopnav">
+            <div id="startPage">
+                <a href="#p_head">
+                    <img src="assets/img/my-icons-collection/svg/004-pagoda.svg" alt="temple japonais"
+                        title="temple japonais">
+                    Accueil
+                </a>
+            </div>
+            <div id="story">
+                <a href="#secStory">
+                    <img src="assets/img/my-icons-collection/svg/001-temple.svg" alt="torii" title="torii">
+                    Notre restaurant
+                </a>
+            </div>
+            <div id="contact">
+                <a href="#secContact">
+                    <img src="assets/img/my-icons-collection/svg/003-invoice.svg" alt="papier et plume"
+                        title="papier et plume">
+                    Contact
+                </a>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Services
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#secService">Nos spécialités</a>
+                    <a href="assets/img/menu.jpg">Le Menu</a>
+                    <a href="#secContact">
+                        <img src="assets/img/my-icons-collection/svg/002-asian.svg">
+                        Devis Traiteur
+                    </a>
+                </div>
+            </div>
+            <a href="#secFooter">About</a>
+            <a href="javascript:void(0);" class="icon" onclick="respNavBar()">&#9776;</a>
+        </nav>
 
 
-<!-- 
+        <!-- 
 -- Story
 ---------------------------------->
 
-<section id="secStory">
-    <div class="borderTitle"><h1>Bienvenue<h1></div>
-        <div class="imgStory">
-            <div class="txtStory">
-                <h2>Notre histoire</h2>
-                <p>La famille Tanaka réputé dans la province d'Osaka pour leur stand de sushi, au marché de Kuromon Ichiba s'est installé au Havre
-                 depuis 2 générations.</p>
-                <p>Depuis 2018, Kiryo le 1er fils et sa femme Aya vous accueillent et font perdurer la tradition ainsi que leur savoir faire ancestrale au sein 
-                 de leur étabilissement.</p>
-                <p>Venez découvrir les délices d'une cuisine rafinée et exotique, sur place, à emporter, ou encore en faisant appel au service traiteur pour vos
-                 soirées et vos récéptions (sur devis via le formulaire de <a href="#secContact">contact</a>).</p>
+        <section id="secStory">
+            <div class="borderTitle">
+                <h1>Bienvenue<h1>
             </div>
-        </div>
-    </div>
-</section>
+            <div class="imgStory">
+                <div class="txtStory">
+                    <h2>Notre histoire</h2>
+                    <p>La famille Tanaka réputé dans la province d'Osaka pour leur stand de sushi, au marché de Kuromon
+                        Ichiba s'est installé au Havre
+                        depuis 2 générations.</p>
+                    <p>Depuis 2018, Kiryo le 1er fils et sa femme Aya vous accueillent et font perdurer la tradition
+                        ainsi que leur savoir faire ancestrale au sein
+                        de leur étabilissement.</p>
+                    <p>Venez découvrir les délices d'une cuisine rafinée et exotique, sur place, à emporter, ou encore
+                        en faisant appel au service traiteur pour vos
+                        soirées et vos récéptions (sur devis via le formulaire de <a href="#secContact">contact</a>).
+                    </p>
+                </div>
+            </div>    
+    </section>
 
-<!-- 
+    <!-- 
 -- Spécialités
 ------------------------------------------>
- <section id="secService">
-    <div class="borderTitle"><h1>Nos spécialités<h1></div>
+    <section id="secService">
+        <div class="borderTitle">
+            <h1>Nos spécialités<h1>
+        </div>
         <div class="caroussel_diapo">
             <input checked id="carou_un" name="rotation" type="radio">
             <label for="carou_un"></label>
@@ -115,7 +129,8 @@
                     </div>
                     <div>
                         <h1>Brochettes de crevettes</h1>
-                        <img src="assets/img/Brochettes_crevettes.jpg" alt="Brochettes de crevettes" title="Brochettes de crevettes">
+                        <img src="assets/img/Brochettes_crevettes.jpg" alt="Brochettes de crevettes"
+                            title="Brochettes de crevettes">
                         <p>Brochettes de crevettes flambées</p>
                     </div>
                     <div>
@@ -146,99 +161,106 @@
                 </div>
             </div>
         </div>
- </section>
-<!-- 
+    </section>
+    <!-- 
 -- Contact
 ----------------------------------->
 
-<section id="secContact">
-    <div class="borderTitle"><h1>Contact<h1></div>
-    <div class="divCenter">
-        <p>Vous souhaitez nous contacter, passer une commande à emporter,réserver une table ou même privatiser 
-        notre salle pour un séminanire au autre ? N'hésitez plus ! Envoyez nous un e-mail avec vos coordonnées,
-        via le formulaire suivant nous vous recontacterons rapidement.<br>
-        Si vous souhaitez un devis pour une préstation traiteur, veuillez nous indiquer la date, le lieu et le 
-        nombre de personne qui vous conviendraient nous ferons au mieux pour répondre à vos exigences.
-        </p>
-    </div>
-    <form method="post">
-
-        <fieldset>
-            <legend>Contact</legend>
-            <div>
-                <label for="surname">Prénom </label>
-                <input type="text" id="surname" required>
-            </div>
-            <div>
-                <label for="name">Nom </label>
-                <input type="text" id="name" required>
-            </div>
-            <div>
-                <label for="email">Votre email </label>
-                <input type="email" id="email" placeholder="exemple@email.com"required>
-            </div>
-            <div>
-                <label for="phone">Téléphone </label>
-                <input type="text" id="phone" required>
-            </div>
-            <div>
-            <label for="object">Votre demande concerne :</label>
-            <select name="object" id="object" size="1">
-                <option>Devis Traiteur</option>
-                <option>Commande à emporter</option>
-                <option>Réservations</option>
-                <option>Privatisations</option>
-                <option>Réclamations</option>
-                <option>Autres (à préciser)</option>
-            </select>
-            </div>
-            <textarea></textarea>
-            <br>
-            <button type="submit">Envoyer le message</button>
-        </fieldset>
-    </form>
-</section>
-
-
-<!-- 
--- Footer
------------------------------------>
-<footer id="secFooter">
-    
-
-    <div class="flexRow">
-        <a href="https://www.facebook.com/pages/Hanami-Sushi/1485077131732711" target="_blanc">
-        <i class="fab fa-facebook-square fa-5x"></i>
-        </a>
-        <div id="gMap">
-            <h1>Où nous trouver ?</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2591.663966245157!2d0.11625451576130999!3d49.490854263919154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02f1cec5cd277%3A0xedadb77dfb8c137e!2sHanami%20Sushi%20bar!5e0!3m2!1sfr!2sfr!4v1586314049805!5m2!1sfr!2sfr" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <section id="secContact">
+        <div class="borderTitle">
+            <h1>Contact<h1>
         </div>
-        <div id="legalInf">
-            <h1>Informations Légales</h1>
-            <p>
-                <Address>
-                    HANAMI SUSHI BAR,<br>
-                    153 QUAI GEORGE V 76600 LE HAVRE 
-                </Address>
-                <br>
-                SIREN 	794636068
-                <br>
-                SIRET (siege) 	79463606800015
-                <br>
-                MONSIEUR BEN KAN
-                <br>
-                Entrepreneur individuel
-                <br>
+        <div class="divCenter">
+            <p>Vous souhaitez nous contacter, passer une commande à emporter,réserver une table ou même privatiser
+                notre salle pour un séminanire au autre ? N'hésitez plus ! Envoyez nous un e-mail avec vos coordonnées,
+                via le formulaire suivant nous vous recontacterons rapidement.<br>
+                Si vous souhaitez un devis pour une préstation traiteur, veuillez nous indiquer la date, le lieu et le
+                nombre de personne qui vous conviendraient nous ferons au mieux pour répondre à vos exigences.
             </p>
         </div>
+        <form method="post">
+
+            <fieldset>
+                <legend>Contact</legend>
+                <div>
+                    <label for="surname">Prénom </label>
+                    <input type="text" id="surname" required>
+                </div>
+                <div>
+                    <label for="name">Nom </label>
+                    <input type="text" id="name" required>
+                </div>
+                <div>
+                    <label for="email">Votre email </label>
+                    <input type="email" id="email" placeholder="exemple@email.com" required>
+                </div>
+                <div>
+                    <label for="phone">Téléphone </label>
+                    <input type="text" id="phone" required>
+                </div>
+                <div>
+                    <label for="object">Votre demande concerne :</label>
+                    <select name="object" id="object" size="1">
+                        <option>Devis Traiteur</option>
+                        <option>Commande à emporter</option>
+                        <option>Réservations</option>
+                        <option>Privatisations</option>
+                        <option>Réclamations</option>
+                        <option>Autres (à préciser)</option>
+                    </select>
+                </div>
+                <textarea></textarea>
+                <br>
+                <button type="submit">Envoyer le message</button>
+            </fieldset>
+        </form>
+    </section>
+
+
+    <!-- 
+-- Footer
+----------------------------------->
+    <footer id="secFooter">
+
+
+        <div class="flexRow">
+            <a class="fblogo" href="https://www.facebook.com/pages/Hanami-Sushi/1485077131732711" target="_blanc">
+                <i class="fab fa-facebook-square fa-5x"></i>
+            </a>
+            <div id="gMap">
+                <h1>Où nous trouver ?</h1>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2591.663966245157!2d0.11625451576130999!3d49.490854263919154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02f1cec5cd277%3A0xedadb77dfb8c137e!2sHanami%20Sushi%20bar!5e0!3m2!1sfr!2sfr!4v1586314049805!5m2!1sfr!2sfr"
+                    width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+            </div>
+            <div id="legalInf">
+                <h1>Informations Légales</h1>
+                <p>
+                    <Address>
+                        HANAMI SUSHI BAR,<br>
+                        153 QUAI GEORGE V 76600 LE HAVRE
+                    </Address>
+                    <br>
+                    SIREN 794636068
+                    <br>
+                    SIRET (siege) 79463606800015
+                    <br>
+                    MONSIEUR BEN KAN
+                    <br>
+                    Entrepreneur individuel
+                    <br>
+                </p>
+            </div>
+        </div>
+        <div id="copyright">
+            <p>- Site Ouèb conçu et réalisé par <strong>Born2Lose Corp. -</strong></p>
+        </div>
+    </footer>
+    <!-- scriptNavBar -->
+    <script src="assets/js/scriptNavBar.js"></script>
+    <!-- scriptNavBar -->
     </div>
-    <div id="copyright"><p>- Site Ouèb conçu et réalisé par <strong>Born2Lose Corp. -</strong></p></div>
-</footer>
-<!-- scriptNavBar -->
-<script  src="assets/js/scriptNavBar.js"></script>
-<!-- scriptNavBar -->    
 </body>
+
 </html>
-j kudegrbj oidjv foiuvcj dsflivds
-vdfj li
