--- a/index.html
+++ b/index.html
@@ -181,23 +181,23 @@
 
             <fieldset>
                 <legend>Contact</legend>
-                <div>
-                    <label for="surname">Prénom </label>
+                <div class="formulaire">
+                    <label for="surname">Prénom :</label>
                     <input type="text" id="surname" required>
                 </div>
-                <div>
-                    <label for="name">Nom </label>
+                <div class="formulaire">
+                    <label for="name">Nom :</label>
                     <input type="text" id="name" required>
                 </div>
-                <div>
-                    <label for="email">Votre email </label>
+                <div class="formulaire">
+                    <label for="email">Votre email :</label>
                     <input type="email" id="email" placeholder="exemple@email.com" required>
                 </div>
-                <div>
-                    <label for="phone">Téléphone </label>
+                <div class="formulaire">
+                    <label for="phone">Téléphone :</label>
                     <input type="text" id="phone" required>
                 </div>
-                <div>
+                <div class="formulaire1">
                     <label for="object">Votre demande concerne :</label>
                     <select name="object" id="object" size="1">
                         <option>Devis Traiteur</option>
