--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- font awsome -->
     <script src="https://kit.fontawesome.com/d5862bfc1c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Shojumaru&display=swap" rel="stylesheet">
+    <!-- bootsrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- icone du site -->
     <link rel="shortcut icon" type="image/ico" href="assets/img/favicon.ico" />
     <title>Hanami sushi</title>
 </head>
@@ -27,7 +33,11 @@
             <div></div>
         </header>
 
-        <nav class="topnav" id="myTopnav">
+        <!-- ============ -->
+        <!-- ===TopNav=== -->
+        <!-- ============ -->
+
+        <nav class="navbar sticky-top navbar-dark justify-content-rigth">
             <div id="startPage">
                 <a href="#p_head">
                     <img src="assets/img/my-icons-collection/svg/004-pagoda.svg" alt="temple japonais"
@@ -35,12 +45,14 @@
                     Accueil
                 </a>
             </div>
+
             <div id="story">
                 <a href="#secStory">
                     <img src="assets/img/my-icons-collection/svg/001-temple.svg" alt="torii" title="torii">
                     Notre restaurant
                 </a>
             </div>
+
             <div id="contact">
                 <a href="#secContact">
                     <img src="assets/img/my-icons-collection/svg/003-invoice.svg" alt="papier et plume"
@@ -48,27 +60,23 @@
                     Contact
                 </a>
             </div>
+
             <div class="dropdown">
-                <button class="dropbtn">Services
-                    <i class="fa fa-caret-down"></i>
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Services 
+
                 </button>
-                <div class="dropdown-content">
-                    <a href="#secService">Nos spécialités</a>
-                    <a href="assets/img/menu.jpg">Le Menu</a>
-                    <a href="#secContact">
-                        <img src="assets/img/my-icons-collection/svg/002-asian.svg">
-                        Devis Traiteur
-                    </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <a class="dropdown-item text-body" href="#secService">Nos spécialités</a>
+                    <a class="dropdown-item text-body" href="assets/img/menu.jpg">Le Menu</a>
+                    <a class="dropdown-item text-body" href="#secContact"> <img src="assets/img/my-icons-collection/svg/002-asian.svg"> Devis Traiteur</a>
                 </div>
             </div>
+
             <a href="#secFooter">About</a>
-            <a href="javascript:void(0);" class="icon" onclick="respNavBar()">&#9776;</a>
         </nav>
-
-
-        <!-- 
--- Story
----------------------------------->
+        <!-- Story -->
 
         <section id="secStory">
             <div class="borderTitle">
@@ -93,9 +101,8 @@
             </div>
         </section>
 
-        <!-- 
--- Spécialités
------------------------------------------->
+        <!-- Spécialités  -->
+
         <section id="secService">
             <div class="borderTitle">
                 <h1>Nos spécialités<h1>
@@ -164,9 +171,8 @@
                 </div>
             </div>
         </section>
-        <!-- 
--- Contact
------------------------------------>
+
+        <!-- Contact -->
 
         <section id="secContact">
             <div class="borderTitle">
@@ -220,10 +226,8 @@
             </form>
         </section>
 
+        <!-- Footer -->
 
-        <!-- 
--- Footer
------------------------------------>
         <footer id="secFooter">
 
 
@@ -265,6 +269,17 @@
         <script src="assets/js/scriptNavBar.js"></script>
         <!-- scriptNavBar -->
     </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
