--- a/index.html
+++ b/index.html
@@ -37,20 +37,22 @@
         <!-- ===TopNav=== -->
         <!-- ============ -->
 
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light justify-content-end">
-            <button class="navbar-toggler bg-white " type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <nav id="myTopnav" class="navbar navbar-expand-md navbar-light sticky-top">
+            <div class="nav-item">
+                <a class="nav-link text-light" href="#p_head"><img
+                        src="assets/img/my-icons-collection/svg/004-pagoda.svg" alt="temple japonais"
+                        title="temple japonais">
+                    Accueil
+                </a>
+            </div>
+            <button class="navbar-toggler bg-white " type="button" data-toggle="collapse"
+                data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link text-light" href="#p_head"><img src="assets/img/my-icons-collection/svg/004-pagoda.svg"
-                                alt="temple japonais" title="temple japonais">
-                            Accueil
-                        </a>
-                    </li>
 
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link text-light" href="#secStory"><img
                                 src="assets/img/my-icons-collection/svg/001-temple.svg" alt="torii" title="torii">
@@ -65,8 +67,8 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink"
+                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Services
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
