--- a/index.html
+++ b/index.html
@@ -113,77 +113,96 @@
             </div>
         </section>
 
-        <!-- Spécialités  -->
-
-        <section id="secService">
+        <!-- =========================== -->
+        <!-- ===carousel/Spécialités===  -->
+        <!-- =========================== -->
+        <div id="secService">
             <div class="borderTitle">
                 <h1>Nos spécialités<h1>
             </div>
-            <div class="caroussel_diapo">
-                <input checked id="carou_un" name="rotation" type="radio">
-                <label for="carou_un"></label>
-                <input id="carou_deux" name="rotation" type="radio">
-                <label for="carou_deux"></label>
-                <input id="carou_trois" name="rotation" type="radio">
-                <label for="carou_trois"></label>
-                <input id="carou_quatre" name="rotation" type="radio">
-                <label for="carou_quatre"></label>
-                <input id="carou_cinq" name="rotation" type="radio">
-                <label for="carou_cinq"></label>
-                <input id="carou_six" name="rotation" type="radio">
-                <label for="carou_six"></label>
-                <input id="carou_sept" name="rotation" type="radio">
-                <label for="carou_sept"></label>
-                <input id="carou_huit" name="rotation" type="radio">
-                <label for="carou_huit"></label>
-                <div class="contenu_carou">
-                    <div class="caroussel">
-                        <div>
-                            <h1>Poulet façon Osaka</h1>
-                            <img src="assets/img/Maruei.jpg" alt="Poulet Osaka" title="Poulet Osaka">
+            <div id="carousel_content" class="carousel slide bg-primary" data-ride="carousel">
+
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel_content" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel_content" data-slide-to="1"></li>
+                    <li data-target="#carousel_content" data-slide-to="2"></li>
+                    <li data-target="#carousel_content" data-slide-to="3"></li>
+                    <li data-target="#carousel_content" data-slide-to="4"></li>
+                    <li data-target="#carousel_content" data-slide-to="5"></li>
+                    <li data-target="#carousel_content" data-slide-to="6"></li>
+                    <li data-target="#carousel_content" data-slide-to="7"></li>
+
+                </ol>
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/img/Maruei.jpg" class="d-block w-100" alt="Poulet Osaka">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Poulet façon Osaka</h5>
                             <p>Poulet façon Osaka et ses feuilles de nori</p>
                         </div>
-                        <div>
-                            <h1>Boeuf Teryaki</h1>
-                            <img src="assets/img/beuf_teriyaki.jpg" alt="Boeuf Teryaki" title="Boeuf Teryaki">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/beuf_teriyaki.jpg" class="d-block w-100" alt="Boeuf Teryaki">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Boeuf Teryaki</h5>
                             <p>Boeuf façon Teryaki</p>
                         </div>
-                        <div>
-                            <h1>Brochettes de crevettes</h1>
-                            <img src="assets/img/Brochettes_crevettes.jpg" alt="Brochettes de crevettes"
-                                title="Brochettes de crevettes">
-                            <p>Brochettes de crevettes flambées</p>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/Brochettes_crevettes.jpg" class="d-block w-100"
+                            alt="Brochettes de crevettes">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Brochettes de crevettes</h5>
+                            <p>Brochettes de crevettes</p>
                         </div>
-                        <div>
-                            <h1>Nigiris et makis</h1>
-                            <img src="assets/img/platter.jpg" alt="Nigiris et makis" title="Nigiris et makis">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/platter.jpg" class="d-block w-100" alt="Nigiris et makis">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Nigiris et makis</h5>
                             <p>Plateau nigiri et makis</p>
                         </div>
-                        <div>
-                            <h1>Kamaboto</h1>
-                            <img src="assets/img/Kamaboko.jpg" alt="Kamato" title="Kamato">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/Kamaboko.jpg" class="d-block w-100" alt="Kamaboko">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Kamaboko</h5>
                             <p>Kamaboko traditionnel</p>
                         </div>
-                        <div>
-                            <h1>Sashimis</h1>
-                            <img src="assets/img/sashimi_tartare.jpg" alt="Sashimis" title="Sashimis">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/sashimi_tartare.jpg" class="d-block w-100" alt="Sashimis">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Sashimis</h5>
                             <p>Sashimis tartare d'algues et caramel au pamplemousse</p>
                         </div>
-                        <div>
-                            <h1>Chirashi</h1>
-                            <img src="assets/img/chirashi-tofu.jpg" alt="Chirashi" title="Chirashi">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/chirashi-tofu.jpg" class="d-block w-100" alt="Chirashi">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Chirashi</h5>
                             <p>Chirashi au tofu fumé</p>
-                        </div>
-                        <div>
-                            <h1>Tempura</h1>
-                            <img src="assets/img/tempura.jpg" alt="Tempura" title="Tempura">
-                            <p>Tempura façon Osaka</p>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
 
+                <a class="carousel-control-prev" href="#carousel_content" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel_content" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
         <!-- Contact -->
 
         <section id="secContact">
