mise en page pour tel

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- Story -->
 
         <section id="secStory">
-            <div class="borderTitle">
+            <div class="borderTitle Bienvenue">
                 <h1>Bienvenue<h1>
             </div>
             <div class="imgStory">
