--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <form method="post">
 
                 <fieldset>
-                    <legend>Contact</legend>
+                    <legend>&nbsp;</legend>
                     <div class="container">
                         <div class="row">
                             <div class="col-4">
